minnor change in the .css for CSS reset

--- a/lesson02/css/main.css
+++ b/lesson02/css/main.css
@@ -20,6 +20,7 @@ time, mark, audio, video {
     margin: 0;
     padding: 0;
     border: 0;
+    font: inherit;
     vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -35,6 +36,10 @@ ol, ul {
 }
 blockquote, q {
     quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: none;
 }
 table {
     border-collapse: collapse;
