--- a/lesson02/styles/main.css
+++ b/lesson02/styles/main.css
@@ -1,71 +1,26 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-   CSS reset
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-.overflow {
-    overflow: hidden;
-}
-/*wrapper*/
+/*--------------------wrapper--------------------*/
 .container {
     width: 1170px;
     margin: 0 auto;
 }
-/*header*/
+.aion-header-overflow {
+    overflow: hidden;
+}
+
+/*--------------------header--------------------*/
+
 .header {
     background: #3498db;
     padding: 55px 0;
     overflow: hidden;
 }
-.main-logo {
+.aion-logo {
     float: left;
     width: 150px;
     height: 35px;
     overflow: hidden;
 }
-.btn-menu {
+.aion-menu-btn {
     float: right;
     width: 40px;
     height: 29px;
@@ -91,7 +46,7 @@ table {
     margin-bottom: 178px;
 }
 
-/*content*/
+/*--------------------main--------------------*/
 
 .bg-circle {
     background: #ecf0f1;
@@ -211,3 +166,5 @@ table {
     margin: 0 40px;
     vertical-align: middle;
 }
+
+/*--------------------footer--------------------*/
