--- a/lesson02/styles/main.css
+++ b/lesson02/styles/main.css
@@ -29,19 +29,19 @@
     text-indent: -9999px;
     border: 0;
 }
-.header .main-header-title,
-.header .main-header-subtitle {
+.header .aion-header-title,
+.header .aion-header-subtitle {
     color: #ffffff;
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
     display: block;
 }
-.header .main-header-title {
+.header .aion-header-title {
     margin-top: 230px;
     font-size: 86px;
 }
-.header .main-header-subtitle {
+.header .aion-header-subtitle {
     font-size: 60px;
     margin-bottom: 178px;
 }
